# propertyScrapingDataEngineering

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  solids.yaml
docker/: Dockerfile.minio
src/dags/: __init__.py  pipelines.py  scrapers.py  upload_to_s3.py
src/data/: apt_data.csv  apt_dump.csv
src/notebooks/: EDA.ipynb
src/scraper/: apt_data_scraper.py  apt_list_scraper.py  immo_scraper.py
