[tool.poetry]
name = "realestatedataengineering"
version = "0.1.0"
description = "Sample project to test out different DE and DS tools"
authors = ["stejul <https://github.com/stejul>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
SQLAlchemy = "^1.4.22"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
bokeh = "^2.3.3"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
PyYAML = "^5.4.1"
pyspark = "^3.0.0.dev0"
jupyter = "^1.0.0"
notebook = "^6.4.0"
scipy = "^1.7.1"
dagster = "^0.12.4"
dagit = "^0.12.4"
requests = "^2.26.0"
pytest = "^6.2.4"
dagstermill = "^0.12.4"
dagster-pandas = "^0.12.4"
dagster-spark = "^0.12.4"
dagster-pyspark = "^0.12.4"
pyspark-stubs = "3.0.0.dev0"
html5lib = "^1.1"
Scrapy = "^2.5.0"
minio = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
